# pynat

./: .gitignore  CHANGELOG.md  PR_DESCRIPTION.md  README.md  coming_soon_near_you.ipynb  coming_soon_streamlit_app.py  con_man.py  helpers.py  helpers_workbench.ipynb  inat_api.py  inaturalismus.ipynb  inaturalismus_old.ipynb  inaturalist_schizoform_partridge_pea_id_outcomes.csv  lookup_places.py  parks.ipynb  pyproject.toml  reliability.py  requirements.txt
.binder/: postBuild  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.ipynb_checkpoints/: inaturalismus-checkpoint.ipynb
notebooks/exploratory/: coming_soon_near_you.ipynb  confidence_manimal.ipynb  inaturalismus.ipynb  my_observations.ipynb  parks.ipynb  va_piedmont_identification_timing.ipynb  va_piedmont_native_phenology.ipynb
notebooks/exploratory/cache/va_piedmont_phenology/: effort_df.parquet  effort_df_v3_taxon_driven.parquet  hist_df.parquet  hist_df_lepidoptera_v3_taxon_driven.parquet  hist_df_v2.parquet
tests/: test_con_man.py  test_helpers.py  test_inat_api.py  test_reliability.py
